[workspace]
package.authors = ["littleBitsman"]
package.documentation = "https://docs.rs/json_proc"
package.edition = "2021"
package.license = "MIT"
package.readme = true
package.repository = "https://github.com/littleBitsman/json_proc"
package.version = "0.2.0"

[package]
name = "json_proc"
description = "provides a proc macro for parsing JSON-like syntax"

authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
json_proc_macro = { path = "./json_proc_macro", version = "0.2.0" }

json_proc_trait = { path = "./json_proc_trait", version = "0.2.0" }

[dev-dependencies]
serde_json = "1.0.128"
