[workspace.package]
authors = ["littleBitsman"]
documentation = "https://docs.rs/json_proc"
edition = "2021"
license = "MIT"
readme = true
repository = "https://github.com/littleBitsman/json_proc"
version = "0.4.2"

[package]
name = "json_proc"
description = "provides a proc macro for parsing JSON-like syntax"

authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
json_proc_macro = { path = "./json_proc_macro", version = "0.4.2" }

[dev-dependencies]
serde_json = "1.0.128"