[package]
name = "json_proc_macro"
description = "provides a proc macro for parsing JSON-like syntax"

authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
exprs-as-keys = []

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full"] }
proc-macro2 = "1.0.86"

[build-dependencies]
rustc_version = "0.4.1"

[lib]
proc-macro = true
