[package]
name = "json_proc_trait"
description = "defines a trait that json_proc_macro uses (avoids cyclic dependencies)"

authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
